--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,6 +1,12 @@
 
-.createAccount button {
+.createAccount a {
+    display: block;
     width: 100%;
+    text-decoration: none;
+    padding: 0.7em 1em;
+    font-size: 120%;
+    text-align: center;
+    background: #ffffff33;
 }
 .posttop {
     width: 100%;
