Show loading indicator when connecting

--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,4 +1,13 @@
 
+.connecting, .connecting p {
+    margin-top: 40px;
+    text-align: center;
+
+    img {
+        width: 300px;
+    }
+}
+
 .createAccount a {
     display: block;
     width: 100%;
